"Fixes" the perma vertical scrollbar on the Graph

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -170,7 +170,7 @@ body {
 	&__container {
 		display: flex;
 		flex-direction: column;
-		height: 100vh;
+		height: calc(100vh - 1px); // shoot me -- the 1px is to stop the vertical scrollbar from showing up
 		gap: 0;
 		padding: 0 2px;
 	}
